tests/snapshots/files__diamond_no_opt.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  x: int = const 4;
  v0_: int = const 4;
  v1_: int = const 4;
  cond: bool = lt v0_ v1_;
  br cond .sblock___3 .sblock___4;
.sblock___3:
  jmp .sblock___1;
.sblock___4:
  jmp .sblock___2;
.sblock___2:
.C:
  a: int = const 2;
  jmp .sblock___1;
.sblock___1:
.B:
  a: int = const 1;
.sblock___0:
.D:
  w: int = const 2;
  ret;
.sblock___5:
.exit___:
}

