tests/snapshots/files__div-structured.snap
---
source: tests/files.rs
expression: result.visualization
---
main {
block:
 v0: int = const 9;
 v1: int = const -20;
 res: int = div v0 v1;
 print res;
 return

}
