tests/snapshots/files__div.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  jmp .sblock___0;
.sblock___0:
.b1:
  v0.0: int = const 9;
  v1.0: int = const -20;
  v0_: int = const 9;
  v1_: int = const -20;
  res.0: int = div v0_ v1_;
  v3_: int = const 9;
  v4_: int = const -20;
  v2_: int = div v3_ v4_;
  print v2_;
  ret;
.sblock___1:
.exit___:
}

