tests/snapshots/files__duplicate_branch-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 5
@main(v0: int) {
  c1_: int = const 4;
  print c1_;
  ret;
}
