tests/snapshots/files__duplicate_branch-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 5
@main(v0: int) {
.b1_:
  c2_: int = const 4;
  print c2_;
}
