tests/snapshots/files__duplicate_branch-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v1_: int = const 4;
  print v1_;
}
